--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -13,7 +13,8 @@
   --card-bg-color: #ffffff;
   --card-fg-color: #1c1e26;
   --code-bg-color: #f5f5f5;
-  --scrollbar-thumb-color: #CDCDCD;
+  --scrollbar-thumb-color: #9E9E9E;
+  --scrollbar-track-color: #CDCDCD;
 
 
   --dark-bg-color: #1c1e26;
