--- a/style.scss
+++ b/style.scss
@@ -14,8 +14,8 @@
 
 html { 
   font-family: var(--default-font);
-  scrollbar-color: var(--scrollbar-thumb-color) var(--scrollbar-thumb-color);
-  scrollbar-width: thin;
+  scrollbar-color: var(--scrollbar-thumb-color) var(--scrollbar-track-color);
+  // scrollbar-width: thin;
 
   ::-webkit-scrollbar {
     width: 8px;
